# MakeBsdiffSo

./: readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bashellwang/makebsdiffso/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: old.apk
app/src/main/assets/diff/: app2.apk
app/src/main/assets/merge/: patch
app/src/main/java/com/bashellwang/makebsdiffso/: FileUtils.java  HandlerManager.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/bashellwang/makebsdiffso/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libbsdiff/: build.gradle
libbsdiff/src/androidTest/java/com/bashellwang/libbsdiff/: ExampleInstrumentedTest.java
libbsdiff/src/main/: AndroidManifest.xml
libbsdiff/src/main/cpp/: CMakeLists.txt  bsdiff.c  bspatch.c  diffpatch-lib.cpp
libbsdiff/src/main/cpp/bzip2/: unzcrash.c
libbsdiff/src/main/java/com/bashellwang/libbsdiff/: BsdiffUtils.java
libbsdiff/src/test/java/com/bashellwang/libbsdiff/: ExampleUnitTest.java
